mall-order/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: mall-order
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
